--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <!-- ******HEADER****** --> 
     <header class="header">
         <div class="container">                       
-            <img class="profile-image img-responsive pull-left" src="img/profile.png" alt="James Lee" />
+            <img class="profile-image img-responsive pull-left" src="img/IMG_5649(1).JPG" alt="James Lee" />
             <div class="profile-content pull-left">
-                <h1 class="name">Your Name</h1>
-                <h2 class="desc">Your Description</h2>   
+                <h1 class="name">Amelia Brown</h1>
+                <h2 class="desc">I am from a small town called Belzoni and I am determined to prove that I can and will make it in life. I will not be a statistic! </h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
