--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
                             <!-- WRITE YOUR INTRODUCTION IN THIS AREA -->
 
                             <p> My name is Amelia Brown and I am an upcoming sixteen year old senior. I am currently a member of Sisters of Sophistication, A.S.C.E.N.D. program chapter of Yazoo, MS, and the Student Council Association. These organization as well as others have helped me develop two important key skills which are communication and leadership skills. I am very open when talking to others and can present information in a clear and effective manner. As a leader I work well in a team and respect others thoughts and opinions. I go the extra mile to make sure everything is done in decency and in order. Since I am human I have multiple strengths but also weaknesses. Two of my strengths are that I am a hard worker and I voice my opinion or while being a voice for others. Two of my weaknesses are that I get frustrated easily and I can be very aggressive sometimes. My hobbies are reading, cooking, and going on cruises.</p>    
-         
+         <p>hobbies:</p> 
+         <ul>
+             <li>cooking</li>
+             <li>traveling</li>
+             <li>meeting new people</li>
+             <li>being with my family and friends</li>
+         </ul>
                             <p>It's a good idea to include your personal interests and hobbies as well. Commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
                          
                         </div><!--//content-->
