--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="name">Amelia Brown</h1>
                 <h2 class="desc">I am from a small town called Belzoni and I am determined to prove that I can and will make it in life. I will not be a statistic! </h2>   
                 <ul class="social list-inline">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
+                    <li><a href="https://www.facebook.com/amelia.brown.5648"><i class="fa fa-facebook"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="#"><i class="fa fa-github-alt"></i></a></li>                                   
