--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <ul class="social list-inline">
                     <li><a href="https://www.facebook.com/amelia.brown.5648"><i class="fa fa-facebook"></i></a></li>                   
                     <li><a href="https://www.instagram.com/___gummiebear___/?hl=en"><i class="fa fa-instagram"></i></a></li>
-                    <i class="fa fa-cloud-download" aria-hidden="true"></i>
-                    <i class="fa fa-snapchat-ghost" aria-hidden="true"></i>
+                    <li><a href="snapchat"><i class="fa fa-snapchat"></i></a></li> 
+                    <li><a href="cloud-download"><i class="fa fa-cloud-download"></i></a></li> 
                     <li><a href="#"><i class="fa fa-github-alt"></i></a></li>                                   
                 </ul> 
             </div><!--//profile-->
