--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <ul class="social list-inline">
                     <li><a href="https://www.facebook.com/amelia.brown.5648"><i class="fa fa-facebook"></i></a></li>                   
                     <li><a href="https://www.instagram.com/___gummiebear___/?hl=en"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-sign-language"></i></a></li> 
+                    <li><a href="#"><i class="fa fa-glide"></i></a></li> 
                     <li><a href="#"><i class="fa fa-cloud-download"></i></a></li> 
                     <li><a href="#"><i class="fa fa-github-alt"></i></a></li>                                   
                 </ul> 
