--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     </div><!--//section-inner-->                 
                 </aside><!--//section-->
                 
-                <aside class="testimonials aside section">
+                <aside class="Why I chose SSEP?">
                     <div class="section-inner">
                         <h2 class="heading">Testimonials</h2>
                         <div class="content">
