--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                     </div><!--//section-inner-->                 
                 </aside><!--//section-->
                 
-                <aside class="Why I chose SSEP?">
+                <aside class="testimonials aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Testimonials</h2>
-                        <div class="content">
+                        <h2 class="heading">Why SSEP?</h2>
+                        <div class="My number one goal is to become a pediatric nurse ,therefore, I chose this progrm to help me in certain areas that im weak in. I believe if i can learn more I'll be able to do more and be closer to reaching my goal and doing what I love for the rest of my life. ">
                             <div class="item">
                                 <blockquote class="quote">                                  
                                     <p><i class="fa fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
