--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
                 <aside class="testimonials aside section">
                     <div class="section-inner">
                         <h2 class="heading">Why SSEP?</h2>
-                        <div class="My number one goal is to become a pediatric nurse ,therefore, I chose this progrm to help me in certain areas that im weak in. I believe if i can learn more I'll be able to do more and be closer to reaching my goal and doing what I love for the rest of my life. ">
+                        <div class=" ">
                             <div class="item">
                                 <blockquote class="quote">                                  
-                                    <p><i class="fa fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
+                                    <p><i class="fa fa-quote-left"></i>My number one goal is to become a pediatric nurse ,therefore, I chose this progrm to help me in certain areas that im weak in. I believe if i can learn more I'll be able to do more and be closer to reaching my goal and doing what I love for the rest of my life.</p>
                                 </blockquote>                
-                                <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>                                                             
+                                <p class="source"><span class="name">Amelia Brown</span><br /><span class="title">Curabitur commodo</span></p>                                                             
                             </div><!--//item-->
                             
                             
