--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <div class="skillset">
                                
                                 <div class="writing">
-                                    <h3 class="level-title">Writing<span class="Pro" data-toggle="tooltip" data-placement="right" data-animation="true" title="You can use the tooltip to add more info...">Pro</span></h3>
+                                    <h3 class="level-title">Writing<span class="Pro" data-toggle="tooltip" data-placement="left" data-animation="true" title="You can use the tooltip to add more info..."> (Pro)</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="99%">
                                         </div>                                      
