--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="accounting">
-                                    <h3 class="level-title">Accounting<span class="Pro">(Pro)</span></h3>
+                                    <h3 class="level-title">Accounting<span class="level-label">(Pro)</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="96%">
                                         </div>                                      
@@ -226,7 +226,7 @@
                                 </div><!--//item-->
                                 
                                 <div class="dancing">
-                                    <h3 class="level-title">Dancing<span class="Pro">(Pro)</span></h3>
+                                    <h3 class="level-title">Dancing<span class="level-label">(Pro)</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="80%">
                                         </div>                                      
