--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <section class="projects section">
                     <div class="section-inner">
                         <h2 class="heading">Transcript</h2>
-                        <img class="profile-image img-responsive pull-left" src="img/IMG_5649(1).JPG" alt="James Lee" />
+                        <img class="profile-image img-responsive pull-left" src="abrown123.github.io/img/amelia 10th grade.JPG" alt="James Lee" />
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
