--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
-                                <p class="summary">Provide a brief description of your project. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatu.</p>
+                                <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained a eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
                                
                             </div><!--//item-->
                             <div class="item">
