--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <img class="profile-image img-responsive pull-left" src="abrown123.github.io/img/amelia 10th grade.JPG" alt="James Lee" />
                         <div class="content">
                             <div class="item">
-                                <h3 class="title"><a href="#">Project Title Cras Lacus</a></h3>
+                                <h3 class="title"><a href="#">A Little Bit About The Graph</a></h3>
                                 <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained a eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
                                
                             </div><!--//item-->
