--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <div class="content">
                             <div class="item">
                                 <h3 class="title"><a href="#">A Little Bit About The Graph</a></h3>
-                                <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained a eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
+                                <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained an eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
                                
                             </div><!--//item-->
                             <div class="item">
