--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                             <div class="item">
                                 <h3 class="title"><a href="#">A Little Bit About The Graph</a></h3>
                                 <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained an eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
-                       <script type="text/javascript">
+                       <div id="chartcontainer"><script type="text/javascript">
 				var myChart = new JSChart('chartcontainer', 'bar');
 				myChart.setDataXML('data.xml');
 				myChart.draw();
-		       </script>
+		       </script></div>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><a href="#">Project Title Cras eget lacus</a> </h3>
