--- a/index.html
+++ b/index.html
@@ -137,12 +137,14 @@
                             <div class="item">
                                 <h3 class="title"><a href="#">A Little Bit About The Graph</a></h3>
                                 <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained an eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
-  <div id="chartcontainer"><script type="text/javascript">
-			var myData = new Array([10, 20], [15, 10], [20, 30], [25, 10], [30, 5]);
-			var myChart = new JSChart('chartcontainer', 'line');
-			myChart.setDataArray(myData);
-			myChart.draw();
-		       </script><div id="chartcontainer"></div>
+ <div id="chartcontainer"><script type="text/javascript">
+	var myData = new Array([10, 20], [15, 10], [20, 30], [25, 10], [30, 5]);
+	var myChart = new JSChart('chartcontainer', 'line');
+	myChart.setDataArray(myData);
+	myChart.draw();
+</script>
+</div>
+		\
                        
 		       </div>
                             </div><!--//item-->
