--- a/index.html
+++ b/index.html
@@ -137,14 +137,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="#">A Little Bit About The Graph</a></h3>
                                 <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained an eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
- <div id="chartcontainer"><script type="text/javascript">
-			var myData = new Array([10, 20], [15, 10], [20, 30], [25, 10], [30, 5]);
-			var myChart = new JSChart('chartcontainer', 'line');
-			myChart.setDataArray(myData);
-			myChart.draw();
-		</script>
-		</div>
-		\
+
                        
 		       </div>
                             </div><!--//item-->
@@ -305,13 +298,13 @@
                 
                 <aside class="list music aside section">
                     <div class="section-inner">
-                        <h2 class="heading">Favourite Music</h2>
+                        <h2 class="heading">Memberhips</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Ut sollicitudin in mauris non auctor</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">Sisters of Sophistication</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">Student Council Association</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">A.S.C.E.N.D Program</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">Beta Council</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
