--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
                         <h2 class="heading">Memberhips</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-headphones"></i> <a href="#">Sisters of Sophistication</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Student Council Association</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">A.S.C.E.N.D Program</a></li>
-                                <li><i class="fa fa-headphones"></i> <a href="#">Beta Council</a></li>
+                                <li><i class="fa fa-circle"></i> <a href="#">Sisters of Sophistication</a></li>
+                                <li><i class="fa fa-circle"></i> <a href="#">Student Council Association</a></li>
+                                <li><i class="fa fa-circle"></i> <a href="#">A.S.C.E.N.D Program</a></li>
+                                <li><i class="fa fa-circle"></i> <a href="#">Beta Council</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
