--- a/index.html
+++ b/index.html
@@ -137,13 +137,7 @@
                             <div class="item">
                                 <h3 class="title"><a href="#">A Little Bit About The Graph</a></h3>
                                 <p class="summary">This graph represents the grades I earned my tenth grade year.I have maintained an eighty-three or above during this school term and have proved that I can and will be successful in everything I do.</p>
- <div id="chartcontainer">
- 			<script type="text/javascript">
--				var myChart = new JSChart('chartcontainer', 'bar');
--				myChart.setDataXML('data.xml');
--				myChart.draw();
--		       </script>
-			</div>
+
                        
 		       </div>
                             </div><!--//item-->
@@ -307,10 +301,10 @@
                         <h2 class="heading">Memberhips</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-circle"></i> <a href="#">Sisters of Sophistication</a></li>
-                                <li><i class="fa fa-circle"></i> <a href="#">Student Council Association</a></li>
-                                <li><i class="fa fa-circle"></i> <a href="#">A.S.C.E.N.D Program</a></li>
-                                <li><i class="fa fa-circle"></i> <a href="#">Beta Council</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">Sisters of Sophistication</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">Student Council Association</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">A.S.C.E.N.D Program</a></li>
+                                <li><i class="fa fa-headphones"></i> <a href="#">Beta Council</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
