--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Where you are from</li>
-                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">Your Email</a></li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Belzoni, MS</li>
+                                <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">ameliabrown58@gmail.com</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">Your Website</a></li>
                             </ul>
                         </div><!--//content-->  
@@ -255,7 +255,7 @@
                                 <blockquote class="quote">                                  
                                     <p><i class="fa fa-quote-left"></i>My number one goal is to become a pediatric nurse ,therefore, I chose this progrm to help me in certain areas that im weak in. I believe if i can learn more I'll be able to do more and be closer to reaching my goal and doing what I love for the rest of my life.</p>
                                 </blockquote>                
-                                <p class="source"><span class="name">Amelia Brown</span><br /><span class="title">Curabitur commodo</span></p>                                                             
+                                <p class="source"><span class="name">Amelia Brown</span><br /><span class="title"></span></p>                                                             
                             </div><!--//item-->
                             
                             
@@ -268,8 +268,8 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fa fa-graduation-cap"></i> MSc Psychology and Computer Science</h3>
-                                <h4 class="university">University College London <span class="year">(2011-2012)</span></h4>
+                                <h3 class="title"><i class="fa fa-graduation-cap"></i> High School Dipolma</h3>
+                                <h4 class="university">Humphreys County High School <span class="year">(2016-2017)</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc Computer Science</h3>
