--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> BSc Computer Science</h3>
-                                <h4 class="university">University of Bristol <span class="year">(2008-2011)</span></h4>
+                                <h4 class="university">Tougaloo College <span class="year">(2016-2020)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -321,7 +321,7 @@
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-calendar"></i> <a href="https://developer.apple.com/wwdc/" target="_blank">HOSA 2016</a> (Jackson)</li>
-                                <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">4-H 2015</a> (Seattle)</li>
+                                <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">4-H 2015</a> (Jackson)</li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -339,7 +339,7 @@
     <footer class="footer">
         <div class="container text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-                <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+                <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Amelia</a> for employers</small>
         </div><!--//container-->
     </footer><!--//footer-->
  
