--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <hr class="divider" />
 
                             <div class="item featured text-center">
-                                <h3 class="title"><a></a></h3>
+                                <h3 class="title"><a>References</a></h3>
                                 <p class="summary"> </p>
                                 <!-- <div class="featured-image">
                                     <a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-products-velocity/" target="_blank">
@@ -117,7 +117,7 @@
                                     </div> -->
                                     <!-- THIS IS WHERE YOU CAN PUT AN IMPORTANT PROJECT -->
                                 <div class="desc text-left">                                    
-                                    <p></p>
+                                    <p>https://nobullying.com/bullied-for-being-fat/</p>
                                     <p></p>
                                 </div><!--//desc-->         
                                                  
