--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                                     </div> -->
                                     <!-- THIS IS WHERE YOU CAN PUT AN IMPORTANT PROJECT -->
                                 <div class="desc text-left">                                    
-                                    <p>https://nobullying.com/bullied-for-being-fat/</p>
-                                    <p>http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2568994/</p>
+                                    <p>"Bullied for Being Fat–Bullying Overweight Children." NoBullying Bullying CyberBullying Resources. N.p., 22 Dec. 2015. Web. 08 July 2016. </p>
+                                    <p>Reeves, Gloria M., Teodor T. Postolache, and Soren Snitker. "Childhood Obesity and Depression: Connection between These Growing Problems in Growing Children." International Journal of Child Health and Human Development : IJCHD. U.S. National Library of Medicine, Aug. 2008. Web. 08 July 2016. </p>
                                     <p>https://www.sciencedaily.com/releases/2009/05/090520064349.htm</p>
                                     <p>http://www.medicaldaily.com/suicide-america-high-rate-teen-girls-38322</p>
                                     <p>http://www.eurekalert.org/pub_releases/2003-10/apa-ocb100103.php</p>
