--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                                 <div class="desc text-left">                                    
                                     <p>"Bullied for Being Fat–Bullying Overweight Children." NoBullying Bullying CyberBullying Resources. N.p., 22 Dec. 2015. Web. 08 July 2016. </p>
                                     <p>Reeves, Gloria M., Teodor T. Postolache, and Soren Snitker. "Childhood Obesity and Depression: Connection between These Growing Problems in Growing Children." International Journal of Child Health and Human Development : IJCHD. U.S. National Library of Medicine, Aug. 2008. Web. 08 July 2016. </p>
-                                    <p>https://www.sciencedaily.com/releases/2009/05/090520064349.htm</p>
-                                    <p>http://www.medicaldaily.com/suicide-america-high-rate-teen-girls-38322</p>
-                                    <p>http://www.eurekalert.org/pub_releases/2003-10/apa-ocb100103.php</p>
+                                    <p>Center for Advancing Health. "Teens Who Think They’re Overweight More Likely To Try Suicide." ScienceDaily. ScienceDaily, 21 May 2009. Web. 08 July 2016.</p>
+                                    <p>Jaleesa Baulkman. "Suicide In America: Rate Reaches All-Time High, Especially Among Teen Girls." Http://www.medicaldaily.com/. N.p., 23 Apr. 2016. Web.</p>
+                                    <p>AMERICAN PSYCHIATRIC ASSOCIATION. "Obesity Can Be Harmful to Your Child's Mental Health." EurekAlert! N.p., 01 Oct. 2003. Web. 08 July 2016.</p>
                                 </div><!--//desc-->         
                                                  
                             </div><!--//item-->
