--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
                 
                 <section class="experience section">
                     <div class="section-inner">
-                        <h2 class="heading">Work Experience</h2>
+                        <h2 class="heading">Why Should I Be COnsidered for a Position?</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
-                                <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+                                <h3 class="title">Reliability <span class="place"><a href="#"></a></span> <span class="year"></span></h3>
+                                <p>Being reliable is an important building block in the foundation of life. People see that I can be relied upon, therefore, they give me more challenging tasks and responsibilities that have allowed me to grow, learn, and become a leader. I can get the job done without anyone watching over me and directing my every move.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
