--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <ul class="social list-inline">
                     <li><a href="https://www.facebook.com/amelia.brown.5648"><i class="fa fa-facebook"></i></a></li>                   
                     <li><a href="https://www.instagram.com/___gummiebear___/?hl=en"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-glide"></i></a></li> 
-                    <li><a href="#"><i class="fa fa-cloud-download"></i></a></li> 
-                    <li><a href="#"><i class="fa fa-github-alt"></i></a></li>                                   
+                    <li><a href="http://www.humphreyscountyschools.com/"><i class="fa fa-graduation-cap"></i></a></li> 
+                    <li><a href="https://plus.google.com/116190785688836100449/posts"><i class="fa fa-google-plus"></i></a></li> 
+                    <li><a href="https://github.com/abrown123/abrown123.github.io"><i class="fa fa-github-alt"></i></a></li>                                   
                 </ul> 
             </div><!--//profile-->
             <!-- <a class="btn btn-cta-primary pull-right" href="http://themes.3rdwavemedia.com/" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a> -->              
