--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
                 
                 <section class="experience section">
                     <div class="section-inner">
-                        <h2 class="heading">Why Should I Be COnsidered for a Position?</h2>
+                        <h2 class="heading">Why Should I Be Considered for a Position?</h2>
                         <div class="content">
                             <div class="item">
                                 <h3 class="title">Reliability <span class="place"><a href="#"></a></span> <span class="year"></span></h3>
                                 <p>Being reliable is an important building block in the foundation of life. People see that I can be relied upon, therefore, they give me more challenging tasks and responsibilities that have allowed me to grow, learn, and become a leader. I can get the job done without anyone watching over me and directing my every move.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
+                                <h3 class="title"><span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
                                 <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
                             </div><!--//item-->
                             
