--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
                                 <p>Being reliable is an important building block in the foundation of life. People see that I can be relied upon, therefore, they give me more challenging tasks and responsibilities that have allowed me to grow, learn, and become a leader. I can get the job done without anyone watching over me and directing my every move.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title"><span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
-                                <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+                                <h3 class="title">Flexibility<span class="place"><a href="#"></a></span> <span class="year"></span></h3>
+                                <p>Not every problem demands the same solution. By being flexible to new ideas and open-minded enough to consider them, I increase my chances to finding the best possible answer in any aspect of my life including on the job. I can set a good example for my team and reward good ideas.</p>
                             </div><!--//item-->
                             
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
-                                <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                                <h3 class="title">Problem Solver<span class="place"><a href="#"></a></span> <span class="year"></span></h3>
+                                <p>Problem sovling is an essential skill in not only your personal life but in the workplace as well. I am a good problem solver and have a number of skills to prevent problems from happening in the first place. I usually face less drama, conflict, and stressful situations since I have clear boundaries and don't violate other people’s rights.</p>
                             </div><!--//item-->
                             
                         </div><!--//content-->  
