--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
                         <div class="content">
                             <div class="item">                      
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> High School Dipolma</h3>
-                                <h4 class="university">Humphreys County High School <span class="year">(2016-2017)</span></h4>
+                                <h4 class="university">Humphreys County High School <span class="year">(2014-2017)</span></h4>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title"><i class="fa fa-graduation-cap"></i> Nursing</h3>
-                                <h4 class="university">Tougaloo College <span class="year">(2016-2020)</span></h4>
+                                <h4 class="university">Tougaloo College <span class="year">(2017-2020)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -289,11 +289,11 @@
                             <ul class="list-unstyled">
                                 <li class="item">
                                     <span class="title"><strong>English:</strong></span>
-                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
+                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> </span>
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><moderate>Spanish:</moderate></span>
-                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
+                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat-half"></i></span>
                                 </li><!--//item-->
                             </ul>
                         </div><!--//content-->
@@ -309,10 +309,10 @@
                         <h2 class="heading">Membership</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-circle"></i> <a href="#">Sisters of Sophistication</a></li>
-                                <li><i class="fa fa-circle"></i> <a href="#">Student Council Association</a></li>
-                                <li><i class="fa fa-circle"></i> <a href="#">A.S.C.E.N.D Program</a></li>
-                                <li><i class="fa fa-circle"></i> <a href="#">4-H Club</a></li>
+                                <li><i class="fa fa-book"></i> <a href="#">Sisters of Sophistication</a></li>
+                                <li><i class="fa fa-book"></i> <a href="#">Student Council Association</a></li>
+                                <li><i class="fa fa-book"></i> <a href="#">A.S.C.E.N.D Program</a></li>
+                                <li><i class="fa fa-book"></i> <a href="#">4-H Club</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
