--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
                             <ul class="list-unstyled">
                                 <li class="item">
                                     <span class="title"><strong>English:</strong></span>
-                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> </span>
+                                    <span class="level">Native Speaker <br class="visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> </span>
                                 </li><!--//item-->
                                 <li class="item">
                                     <span class="title"><moderate>Spanish:</moderate></span>
-                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat"></i> <i class="fa fa-heartbeat-half"></i></span>
+                                    <span class="level">Professional Proficiency <br class="visible-sm visible-xs"/><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-half"></i></span>
                                 </li><!--//item-->
                             </ul>
                         </div><!--//content-->
